compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__functions__provide_arg_type_to_fn_not_a_tuple.snap
---
source: compiler-core/src/type_/tests/functions.rs
expression: "\npub fn main() {\n   let z = \"not a tuple\"\n   fn(x) { x.2 }(z)\n}\n"
---
----- SOURCE CODE

pub fn main() {
   let z = "not a tuple"
   fn(x) { x.2 }(z)
}


----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:4:12
  │
4 │    fn(x) { x.2 }(z)
  │            ^ This is not a tuple

To index into this value it needs to be a tuple, however it has this type:

    String
